[package]
name = "Horizon-Data-Types"
version = "0.1.0"
edition = "2021"
description = "The Horizon data types library for third-party integrations"
license = "Apache-2.0"

[dependencies]
bincode = "1.3.3"
serde = "1.0.210"
serde_json = "1.0.128"
socketioxide = "0.14.1"
tokio = { version = "1.40.0", features = ["rt", "net", "rt-multi-thread"] }
