[package]
name = "horizon_data_types"
version = "0.2.0"
edition = "2021"
description = "The Horizon data types library for third-party integrations"
license = "Apache-2.0"

[dependencies]
bincode = "1.3.3"
nalgebra = { version = "0.33.1", features = ["serde-serialize"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
socketioxide = "0.14.1"
tokio = { version = "1.40.0", features = ["rt", "net", "rt-multi-thread"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }